# gtfs

./: CMakeLists.txt  README.md
doc/: README.md
headers/: ApiEntities.h  BEntities.h  BL.h  FileEntities.h  checks.h  parsers.h
src/: ToApiEntities.cpp  checks.cpp  data_handler.h  data_loader.cpp  data_processing.cpp  http.cpp  main.cpp  serializer.cpp  trip_processing.cpp
src/csvParsers/: checks.cpp  routes_parser.cpp  shapes_parser.cpp  stop_info_parser.cpp  stop_times_parser.cpp  trips_parser.cpp
tests/: ToApiTest.cpp
